# swapi

./: .env  Cargo.toml  README.md  swapi.db  test.py
migrations/2021-12-01-035919_create_swaps/: down.sql  up.sql
migrations/2021-12-01-050912_swap_config/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  okex.rs  schema.rs
